<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:ap="http://schemas.android.com/apk/res-auto"
android:id="@+id/activity_vitals"
android:background="@color/ap_gray"
android:layout_height="match_parent"
android:layout_width="match_parent"
android:orientation="vertical"
tools:context="eu.credential.app.patient.ui.vitals.VitalsFragment">

<com.androidplot.xy.XYPlot
    style="@style/APDefacto"
    android:id="@+id/plot1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    ap:title="@string/name_vital_weight"
    ap:rangeTitle="@string/rangeZoom"
    ap:lineLabels="left|bottom"
    ap:lineLabelRotationBottom="-45"/>

<com.androidplot.xy.XYPlot
    style="@style/APDefacto"
    android:id="@+id/plot2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    ap:title="@string/name_vital_steps"
    ap:lineLabels="left|bottom"
    ap:lineLabelRotationBottom="-45"/>

</LinearLayout>