<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_diary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ap_gray"
    android:orientation="vertical"
    tools:context="eu.credential.app.patient.ui.vitals.DiaryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/colorBackground"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/zoomBloodText"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/graphTextView"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>
    <com.androidplot.xy.XYPlot
        android:id="@+id/plot1"
        style="@style/APDefacto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/onclick_zoom"
        app:lineLabelRotationBottom="-45"
        app:lineLabels="left|bottom"
        app:title="@string/name_diary_blood" />

</LinearLayout>
